--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xb-O1-AZb">
-                                <rect key="frame" x="87.666666666666671" y="264" width="50.000000000000014" height="30"/>
+                                <rect key="frame" x="87.666666666666686" y="264" width="50.000000000000014" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="2q6-84-nQ4"/>
@@ -117,34 +117,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="AhS-Wo-Gat">
-                                <rect key="frame" x="5" y="44" width="107" height="30"/>
-                                <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKP-8d-KiD">
-                                        <rect key="frame" x="0.0" y="-8" width="0.0" height="38"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <state key="normal" title="+"/>
-                                    </button>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxM-gB-0a4">
-                                        <rect key="frame" x="0.0" y="-8" width="0.0" height="38"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <state key="normal" title="-"/>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ファイル名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfx-1O-5sO">
-                                        <rect key="frame" x="0.0" y="4.6666666666666625" width="107" height="25.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="1aC-g5-Ud5"/>
-                                </constraints>
-                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3po-Yt-gjT">
+                                <rect key="frame" x="10" y="54" width="355" height="624"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtX-fW-Ghz">
-                                <rect key="frame" x="10" y="762" width="355" height="35"/>
+                                <rect key="frame" x="10" y="728" width="355" height="30"/>
                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="fqg-zm-8lf"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <state key="normal" title="戻る">
                                     <color key="titleColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -153,39 +134,30 @@
                                     <segue destination="c8v-0d-TBR" kind="unwind" unwindAction="unwind:" id="9zm-Sw-Trr"/>
                                 </connections>
                             </button>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WqW-91-jtv">
-                                <rect key="frame" x="5" y="74" width="370" height="678"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3po-Yt-gjT">
-                                        <rect key="frame" x="8" y="8" width="354" height="662"/>
-                                    </imageView>
-                                </subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ファイル名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfx-1O-5sO">
+                                <rect key="frame" x="10" y="688" width="107" height="30"/>
                                 <constraints>
-                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="trailing" secondItem="WqW-91-jtv" secondAttribute="trailingMargin" id="CvZ-km-cVo"/>
-                                    <constraint firstItem="nPP-ho-p8s" firstAttribute="trailing" secondItem="3po-Yt-gjT" secondAttribute="trailing" constant="8" id="I0b-Ld-EBM"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="3po-Yt-gjT" secondAttribute="bottom" id="J4X-BF-uMe"/>
-                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="top" secondItem="WqW-91-jtv" secondAttribute="topMargin" id="Twv-EK-iC7"/>
-                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="centerY" secondItem="WqW-91-jtv" secondAttribute="centerY" id="XtN-pR-II4"/>
-                                    <constraint firstItem="3po-Yt-gjT" firstAttribute="leading" secondItem="WqW-91-jtv" secondAttribute="leadingMargin" id="gNR-lI-lvM"/>
+                                    <constraint firstAttribute="height" constant="30" id="YsT-lV-ueY"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="2pg-rQ-sTS"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="nPP-ho-p8s"/>
-                            </scrollView>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.050000000000000003"/>
                         <constraints>
-                            <constraint firstItem="m6k-9w-jlT" firstAttribute="trailing" secondItem="VtX-fW-Ghz" secondAttribute="trailing" constant="10" id="3gh-ki-GgZ"/>
-                            <constraint firstItem="WqW-91-jtv" firstAttribute="trailing" secondItem="m6k-9w-jlT" secondAttribute="trailing" id="3wl-la-VB1"/>
-                            <constraint firstItem="AhS-Wo-Gat" firstAttribute="top" secondItem="m6k-9w-jlT" secondAttribute="top" id="6zC-hN-esq"/>
-                            <constraint firstItem="AhS-Wo-Gat" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="5" id="7vs-Lu-D7Q"/>
-                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="top" secondItem="WqW-91-jtv" secondAttribute="bottom" constant="10" id="Qrh-O9-2cY"/>
-                            <constraint firstItem="WqW-91-jtv" firstAttribute="leading" secondItem="AhS-Wo-Gat" secondAttribute="leading" id="UG6-0s-haR"/>
-                            <constraint firstItem="WqW-91-jtv" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="5" id="XKO-7k-6LM"/>
-                            <constraint firstItem="AhS-Wo-Gat" firstAttribute="top" secondItem="m6k-9w-jlT" secondAttribute="top" id="Zl2-rg-Lf2"/>
-                            <constraint firstItem="WqW-91-jtv" firstAttribute="top" secondItem="AhS-Wo-Gat" secondAttribute="bottom" id="kQk-I4-lMe"/>
-                            <constraint firstAttribute="bottom" secondItem="VtX-fW-Ghz" secondAttribute="bottom" constant="15" id="kyD-eC-dGF"/>
-                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="10" id="m9J-3o-6tk"/>
+                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="leading" secondItem="Xfx-1O-5sO" secondAttribute="leading" id="21L-aF-blb"/>
+                            <constraint firstItem="3po-Yt-gjT" firstAttribute="leading" secondItem="m6k-9w-jlT" secondAttribute="leading" constant="10" id="7ow-qK-bzp"/>
+                            <constraint firstItem="Xfx-1O-5sO" firstAttribute="top" secondItem="3po-Yt-gjT" secondAttribute="bottom" constant="10" id="9nF-gc-y5s"/>
+                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="top" secondItem="Xfx-1O-5sO" secondAttribute="bottom" constant="10" id="JIy-0g-cEg"/>
+                            <constraint firstItem="Xfx-1O-5sO" firstAttribute="leading" secondItem="3po-Yt-gjT" secondAttribute="leading" id="L41-5r-SWJ"/>
+                            <constraint firstItem="m6k-9w-jlT" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xfx-1O-5sO" secondAttribute="trailing" symbolic="YES" id="PMc-kf-U9u"/>
+                            <constraint firstItem="Xfx-1O-5sO" firstAttribute="top" secondItem="3po-Yt-gjT" secondAttribute="bottom" constant="10" id="WoZ-QY-GSQ"/>
+                            <constraint firstItem="m6k-9w-jlT" firstAttribute="trailing" secondItem="3po-Yt-gjT" secondAttribute="trailing" constant="10" id="d64-da-ocC"/>
+                            <constraint firstItem="VtX-fW-Ghz" firstAttribute="trailing" secondItem="3po-Yt-gjT" secondAttribute="trailing" id="iUc-cf-MwF"/>
+                            <constraint firstItem="m6k-9w-jlT" firstAttribute="bottom" secondItem="VtX-fW-Ghz" secondAttribute="bottom" constant="20" id="ijh-tg-BFX"/>
+                            <constraint firstItem="3po-Yt-gjT" firstAttribute="top" secondItem="m6k-9w-jlT" secondAttribute="top" constant="10" id="qau-WD-SRJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="m6k-9w-jlT"/>
                     </view>
@@ -193,13 +165,12 @@
                     <connections>
                         <outlet property="detailImageView" destination="3po-Yt-gjT" id="q2k-Pd-lF0"/>
                         <outlet property="labelFileName" destination="Xfx-1O-5sO" id="yqj-zY-2Qf"/>
-                        <outlet property="scrollView" destination="WqW-91-jtv" id="XRd-GE-h42"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eCq-lG-JPq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="c8v-0d-TBR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="905.79710144927549" y="128.57142857142856"/>
+            <point key="canvasLocation" x="904.79999999999995" y="128.57142857142858"/>
         </scene>
     </scenes>
 </document>
