--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </connections>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6jz-nc-SJh">
-                                <rect key="frame" x="147.66666666666666" y="264" width="80" height="30"/>
+                                <rect key="frame" x="167.66666666666666" y="264" width="60" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="deM-G7-IC7"/>
                                 </constraints>
@@ -42,8 +42,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BX3-O0-Lyp">
                                 <rect key="frame" x="237.66666666666663" y="264" width="50" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="W9n-ul-MXE"/>
-                                    <constraint firstAttribute="width" constant="50" id="baf-1w-gTL"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="baf-1w-gTL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="戻る"/>
@@ -52,9 +51,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xb-O1-AZb">
-                                <rect key="frame" x="87.666666666666671" y="264" width="50.000000000000014" height="30"/>
+                                <rect key="frame" x="87.666666666666671" y="264" width="70.000000000000014" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="2q6-84-nQ4"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="2q6-84-nQ4"/>
                                     <constraint firstAttribute="height" constant="30" id="Gbp-Me-Q7X"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
