--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </connections>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6jz-nc-SJh">
-                                <rect key="frame" x="167.66666666666666" y="264" width="60" height="30"/>
+                                <rect key="frame" x="137.66666666666666" y="264" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="deM-G7-IC7"/>
                                 </constraints>
@@ -40,26 +40,27 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BX3-O0-Lyp">
-                                <rect key="frame" x="237.66666666666663" y="264" width="50" height="30"/>
+                                <rect key="frame" x="247.66666666666663" y="264" width="40" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="baf-1w-gTL"/>
+                                    <constraint firstAttribute="width" constant="40" id="aJs-r6-ofl"/>
+                                    <constraint firstAttribute="height" constant="30" id="zMs-bS-aYd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="戻る"/>
+                                <state key="normal" title="次"/>
                                 <connections>
-                                    <action selector="btnPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OQw-CC-Z12"/>
+                                    <action selector="btn_next:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OQw-CC-Z12"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xb-O1-AZb">
-                                <rect key="frame" x="87.666666666666671" y="264" width="70.000000000000014" height="30"/>
+                                <rect key="frame" x="87.666666666666671" y="264" width="40" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="2q6-84-nQ4"/>
+                                    <constraint firstAttribute="width" constant="40" id="2q6-84-nQ4"/>
                                     <constraint firstAttribute="height" constant="30" id="Gbp-Me-Q7X"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="進む"/>
+                                <state key="normal" title="前"/>
                                 <connections>
-                                    <action selector="btnNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i9I-rY-aTY"/>
+                                    <action selector="btn_prev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i9I-rY-aTY"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -88,9 +89,9 @@
                         </connections>
                     </view>
                     <connections>
-                        <outlet property="btnNext" destination="8Xb-O1-AZb" id="Sr0-LF-RNI"/>
                         <outlet property="btnPlay" destination="6jz-nc-SJh" id="6y2-Ld-2Vu"/>
-                        <outlet property="btnPrev" destination="BX3-O0-Lyp" id="ZgU-B8-8HL"/>
+                        <outlet property="btn_next" destination="BX3-O0-Lyp" id="ZgU-B8-8HL"/>
+                        <outlet property="btn_prev" destination="8Xb-O1-AZb" id="Sr0-LF-RNI"/>
                         <outlet property="imageView" destination="DgP-Pe-9tl" id="OFT-wj-Lt3"/>
                         <segue destination="FoD-Bf-w7t" kind="show" identifier="detail" id="N6t-Tq-mk0"/>
                     </connections>
@@ -112,7 +113,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3po-Yt-gjT">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3po-Yt-gjT">
                                 <rect key="frame" x="10" y="54" width="355" height="624"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtX-fW-Ghz">
